# streamizm

./: .gitignore  Cargo.toml  readme.md
src/: config.rs  errors.rs  main.rs  views.rs
src/views/: catchers.rs  context.rs  mod.rs  pages.rs
static/: styles.css
static/css/: custom.css  styles.css  theme.min.css
static/js/: custom.js
templates/: 404.html.tera  about1.html.tera  about2.html.tera  about3.html.tera  about4.html.tera  collabs.html.tera  contact.html.tera  education.html.tera  events.html.tera  home.html.tera  index.html.tera  layout.html.tera  live.html.tera  play.html.tera  ru_about1.html.tera  ru_about4.html.tera  ru_contact.html.tera  ru_education.html.tera  ru_index.html.tera  ru_layout.html.tera  ru_live.html.tera  terms.html.tera
